--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: ^3.0.1
-
-  font_awesome_flutter: ^10.6.0
+  font_awesome_flutter: ^10.6.0 
+  material_design_icons_flutter: ^7.0.7296
+  curved_navigation_bar: ^1.0.3
+  google_fonts: ^6.1.0
+  intl: ^0.18.1
   get:
-  intl:
-  google_fonts:
   date_picker_timeline:
 
 
