--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   get:
   date_picker_timeline:
   firebase_core: ^2.22.0
+  firebase_auth: ^4.13.0
+  cloud_firestore: ^4.13.0
+  firebase_analytics: ^10.6.4
+  firebase_storage: ^11.5.0
+  firebase_database: ^10.3.4
+  firebase_remote_config: ^4.3.4
 
 
 
