--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   google_fonts: ^6.1.0
   intl: ^0.18.1
   get:
-  date_picker_timeline:
+  date_picker_timeline: ^1.2.5
   firebase_core: ^2.22.0
   firebase_auth: ^4.13.0
   cloud_firestore: ^4.13.0
@@ -50,6 +50,7 @@ dependencies:
   firebase_storage: ^11.5.0
   firebase_database: ^10.3.4
   firebase_remote_config: ^4.3.4
+  table_calendar : ^3.0.0
 
 
 
@@ -62,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
