--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,7 +66,7 @@ flutter {
 }
 
 dependencies {
-    implementation.platform('com.google.firebase:firebase-bom:26.7.0')
-    implementation 'com.google.firebase:firebase-analytics'
+    //implementation.platform('com.google.firebase:firebase-bom:26.7.0')
+    //implementation 'com.google.firebase:firebase-analytics'
     implementation "androidx.multidex:multidex:2.0.1"
 }
