--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_database: ^10.3.4
   firebase_remote_config: ^4.3.4
   table_calendar : ^3.0.0
+  image_picker: ^1.0.4
 
 
 
