--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 
-    "cmake.sourceDirectory": "C:/Users/namra/OneDrive/Desktop/todo_app/linux"
+    "cmake.sourceDirectory": "D:/todoApp/linux"
 
     // "cmake.sourceDirectory": "C:/Users/saxen/OneDrive/Desktop/todoApp/windows/flutter"
 //  f53a58edc380684de397d11e2ec494ecc6b38575
